_build/html/reports/programming-exercises-1.log
Traceback (most recent call last):
  File "/Users/vero/opt/anaconda3/envs/jbook/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/vero/opt/anaconda3/envs/jbook/lib/python3.10/site-packages/nbclient/client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/vero/opt/anaconda3/envs/jbook/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/vero/opt/anaconda3/envs/jbook/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/vero/opt/anaconda3/envs/jbook/lib/python3.10/asyncio/base_events.py", line 641, in run_until_complete
    return future.result()
  File "/Users/vero/opt/anaconda3/envs/jbook/lib/python3.10/site-packages/nbclient/client.py", line 551, in async_execute
    await self.async_execute_cell(
  File "/Users/vero/opt/anaconda3/envs/jbook/lib/python3.10/site-packages/nbclient/client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/vero/opt/anaconda3/envs/jbook/lib/python3.10/site-packages/nbclient/client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
figures = '0123456789ABCDEF'
def hexadecimal(n):
    # Your code here.
    # use an if-statement to distinguish the base case from the recursive case.
    # use the definition of binary from the lecture as inspiration
        
------------------

[0;36m  File [0;32m"/var/folders/82/jclchxtc8v5c1z006s6fwjm9v2lh42/T/ipykernel_76280/3238732830.py"[0;36m, line [0;32m6[0m
[0;31m    [0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block after function definition on line 2

IndentationError: expected an indented block after function definition on line 2 (3238732830.py, line 6)

